# IntelligentReceiptSplitter

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/pytest/: receipt_ocr_test.txt
src/app/: gradio_ui.py  split_ai.py  utils.py
src/core/: split.py
src/llm/: extractor.py  models.py  ollama.py  prompts.yaml  utils.py
src/ocr/: surya.py
tests/: conftest.py  test_ollama.py  test_surya.py
