[project]
name = "SplitAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.15.0",
    "more-itertools>=10.5.0",
    "ollama>=0.4.4",
    "polars>=1.18.0",
    "reflex>=0.6.8",
    "selenium>=4.27.1",
    "surya-ocr>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
